Prevent right most popular from overlapping footer

--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -504,7 +504,7 @@ video {
         display: table-cell;
         width: $a-rightCol-width;
     }
-    .article__secondary-column__inner {
+    .article__secondary-column__inner--has-read-next {
         top: 0;
         bottom: 0;
         position: absolute;
